<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.addstory.AddStoryActivity">
            <ImageView
                android:id="@+id/ivAddStory"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/picture_preview"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#D7D7D7"
                app:layout_constraintDimensionRatio="3:4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_face" />

            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/add_picture"
                android:textColor="@color/primary_red"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAddStory" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="15"
                android:fontFamily="@font/source_sans_pro"
                android:textSize="16sp"
                android:inputType="textMultiLine"
                android:autofillHints="Description"
                android:hint="@string/masukkan_deskripsi"
                android:gravity="start|top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/etDescription"
                app:layout_constraintTop_toBottomOf="@+id/tvAdd" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="#D5D5D5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/allow_location"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/etDescription"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/etDescription"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="#D5D5D5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/btUpload"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:paddingVertical="10dp"
                android:text="@string/add_story"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorSize="100dp"
        app:trackCornerRadius="5dp"
        app:trackThickness="3dp" />
</RelativeLayout>