...
    <string name="allow_location">Add Location</string>
    <string name="toast_error_userlocation">Oops, Location not found, Please Try Again</string>
    <string name="required_permission">Location Permission Required</string>
    <string name="required_permission_message">Before using this feature, you must turn on the location permission. Do you want to turn it on now?</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_optionkamera">Take a picture</string>
    <string name="alert_dialog_opengaleri">Choose from gallery</string>
    <string name="alert_dialog_selectoption">Select Option</string>
    <string name="toast_picture_empty">Please add picture first</string>
</resources>
