...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:maxHeight="100dp">

        <ImageView
            android:id="@+id/ivStory"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:transitionName="picture"
            android:maxHeight="100dp"
            android:minHeight="100dp"
            android:scaleType="centerCrop"
...
